Ajout du titre H1 dans le header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <h1>Bienvenue sur le site</h1>
         <video id="flag" src="videos/flag_belgium.mp4" loop muted></video>
     </header>
     <script src="scripts/main.js"></script>
