--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
 </head>
 <body>
     <header>
-        <h1>Bienvenue sur le site</h1>
+        <section id="menuList">
+            <nav>
+                <ul>
+                    <li><a href="#">Accueil</a></li>
+                    <li><a href="#">Entreprise</a></li>
+                    <li><a href="#">Galerie</a></li>
+                    <li><a href="#">Me contacter</a></li>
+                </ul>
+            </nav>
+        </section>
+        <div id="menu"><span></span><span></span><span></span></div>
+        <div id="mainTitle">
+            <h1>Bienvenue sur le site</h1>
+        </div>
         <video id="flag" src="videos/flag_belgium.mp4" loop muted></video>
     </header>
     <script src="scripts/main.js"></script>
