Ajout show nav + fluidité

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </ul>
             </nav>
         </section>
-        <div id="menu"><span></span><span></span><span></span></div>
+        <div id="menu" onclick="show()"><span></span><span></span><span></span></div>
         <div id="mainTitle">
             <h1>Bienvenue sur le site</h1>
         </div>
