Ajout des variables

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
             </nav>
         </section>
         <div id="menu" onclick="show()"><span></span><span></span><span></span></div>
-        <div id="mainTitle">
-            <h1>Bienvenue sur le site</h1>
-        </div>
+        <div id="mainTitle"><h1>Bienvenue sur le site</h1></div>
         <video id="flag" src="videos/flag_belgium.mp4" loop muted></video>
     </header>
     <script src="scripts/main.js"></script>
