--- a/index.html
+++ b/index.html
@@ -27,84 +27,109 @@
         <video id="flag" src="videos/flag_belgium.mp4" loop muted></video>
     </header>
 
-    <main>
-        <article>
-            <section>
-                <h2>Qui suis-je ?</h2>
-                <div>
-                    <p>Bien le bonjour/bonsoir à toutes et a tous. Je m'appelle Vanwassenhove Kevin, un jeune homme de
-                        27ans.</p>
-                    <p>Ma passion ? Le code, j'ai toujours aimé voir du code malgré ma flemme inimaginable.</p>
-                    <p>J'aime mon pays, je pense que vous l'auriez compris. Ce pays m'a nourri et m'a fait grandir donc je
-                        suis fière d'en montrer son drapeau.</p>
-                </div>
-            </section>
-            <section>
-                <h2>Quelle est l'objectif de ce site ?</h2>
-                <div>
-                    <p>Tout d'abord cela m'a été demandé par ma formation proposé par CF2M qui se situe à Saint-Gilles.</p>
-                    <p>J'ai pour objectif de vous montrer l'avancée de la téchnologie, en tout cas sur les grandes lignes.</p>
-                    <p>Mais surtout, essayer de vous interpeler sur l'origine de celle-ci, est-ce que cette technologie aurait pu apparaître par hasard ou bien par un accident ?</p>
-                    <p>Lorsque je parle d'accident, c'est bien entendue un tremblement de terre ou bien une météorite qui s'écraserait sur la Terre et non pas une idée de génie causée par une pomme qui serait tombé sur la tête de quelqu'un ahaha.</p>
-                </div>
-            </section>
-        </article>
-        <article>
-            <section>
-                <h2>Commençons donc par le commencement !</h2>
-                <div>
-                    <p>Au commencement, Dieu créa les cieux et la terre... OUPS ! Pas si loin dans le temps !</p>
-                    <p>Allons plutôt au commencement de l'informatique, nous remarquons que les femmes en ont été les "porteuses", les initieuses a cette magnifique aventure.</p>
-                    <p>Le 20ème siècle a vu les femmes jouer un rôle important dans le développement de l'informatique, depuis les premières étapes de la programmation jusqu'à l'émergence de l'industrie informatique moderne.</p>
-                    <p>Nous pouvons le proclamer et en être fière que de la même manière que les femmes mettent les hommes au monde, elles ont aussi participé a mettre au monde internet, l'informatique et plein d'autres concepts.</p>
-                    <p>C'est de là que tout a été chamboullé et que l'humanité a vécu un boulversement jamais connu auparavant...</p>
-                </div>
-            </section>
-            <section>
-                <h2>L'informatique et la technologie du 20ème siècle :</h2>
-                <div>
-                    <p>AH l'époque ! Le bon temps comme dirait nos grands parents...</p>
-                    <p>Où l'on pouvait admirer la télévision en noir et blanc. Écrire du texte non pas a la main mais avec une machine a écrire où la moindre faute pouvait être fatale pour notre pauvre petite feuille de papier.</p>
-                    <p>Dans ce siècle, chaque machine crée avait une utilité spécifique qui facilitait la vie de chacun. On pensait a faire une action en particulier et on la concrétisait par la technologie.</p>
-                    <p>C'était une époque prospère en pleine évolution pour mieux rapprocher les gens les uns des autres.</p>
-                    <p>L'invention du téléphonne en 1876 a permis de mieux communiquer et donc de renforcer l'humanité.</p>
-                    <p>On voit donc des idées d'unions et de progression solidaire. Bien sur, l'humain a détourné certaines invention pour en faire du mal mais dans toutes choses il y a un double tranchant.</p>
-                </div>
-                <h2>Le "progrès" de celle-ci:</h2>
-                <div>
-                    <p>Plus le temps passe et plus tout s'accélère. La concurence se fait de plus en plus entre les entreprises que tout se dirige vers la performance. L'industrie intensif se met petit à petit en place et nous voulons toujours tout mieux faire et optimiser.</p>
-                    <p>Ce qui a l'époque avait une seule tâche est vue comme vieux et inutile. On veut pouvoir faire plusieurs choses en même temps avec la même machine.</p>
-                    <p>Les téléphonnes commencent a être portable puis on y ajoute des fonctionnalités comme envoyer des textos ou bien jouer a des jeux.</p>
-                    <p>La télévision passe en couleur et les gens y passent plus de temps qu'avant au lieux de rencontrer des gens.</p>
-                    <p>Les gens deviennent de plus en plus attaché a leur téléphonne et télévision jusqu'à en devenir indispensable.</p>
-                    <p>Les lettres amoureuse se fait de moins en moins, et les textos explosent.</p>
-                    <p>Soudain, intenet apparaît le 12 mars 1989. Ce fut un choc immense pour l'humanité. Les possibilités infini que celle-ci propose désoriente complètement les gens.</p>
-                    <p>Tout devient de plus en plus digitale et les gens passent plus de temps devant un écran que devant les membres de leur famille ou bien avec d'autres personnes de l'éxtérieur.</p>
-                    <p>Des sites internets interdit voient le jour et l'innocence d'une époque passa... Ceraines chose qui nous semblait être réservé pour un public se retrouve visible par tous...</p>
-                    <p>Peut-on vraiment appelé cela un progrès ? Est-ce vraiment a cela que pensait les innovateurs de toute ces technologies ?</p>
-                </div>
-            </section>
-            <section>
-                <h2>La décadence de l'humanité :</h2>
-                <div>
-                    <p>Cela nous ouvre les yeux que plus le temps passe et plus les gens deviennent accro a cette techologie. Nous devons moins sociable et moins intéligent. Le QI diminue avec le temps à cause de cette aisance. Les temps dure qui nous rendait fort ne sont plus et les temps facile qui rendent faible explosent...</p>
-                    <p>Tiendrons nous face a ce virus ? Face a ces tentations qui nous font face a chaque instant ? Mon humble avis est que non. Nous sommes faibles et attiré par les facilités. Nous sommes devenu bien trop dépendant des commerces et technologie qui nous entoure.</p>
-                    <p>Que devons nous faire ? Où nous diriger ? En qui croire ? Nous le savons bien que ceux qui gouverne , mentent.</p>
-                </div>
-                <h2>La solution ?</h2>
-                <div>
-                    <p>Soyons honnête, si vous marchez dans un desert et que vous voyez une maison qu'allez vous vous dire ? Que cette maison est naturel ? Bien sur que non, vous savez que cette maison a été bati par un homme.</p>
-                    <p>L'ordinateur avec lequel vous lisez ces lignes ou bien votre téléphonne/tablette, est-elle aussi une oeuvre naturel ? Bien sur que non ! Il faut être fou pour penser cela n'est-ce pas ? Commet la nature pourrait créer un ordinateur si complexe qui nécessite des calculs incroyablement complexe ?</p>
-                    <p>Comment la nature aurait soudée chaque petit système du CPU de l'ordinateur ?</p>
-                    <p>Mais alors pourquoi penser que notre corps est une oeuvre naturel ? Pourquoi penser que notre cerveau est l'oeuvre du hasard ?</p>
-                    <p>Un ordinateur est bien moins complexe que notre cerveau et pourtant il nous semble plus facile d'imaginer que notre corps est issue du hasard plutôt que de penser cela pour l'ordinateur.</p>
-                    <p>Réveillons nous, la nature autour de nous, notre corps nous montre clairement une oeuvre de quelqu'un. Cette oeuvre est bien sur celle de Dieu.</p>
-                    <p>La seule solution pour que l'humanité puisse survivre et ne pas s'auto détruire est de croire en Dieu.</p>
-                    <p>Jésus revient, croyez en lui et il vous sauvera.</p>
-                </div>
-            </section>
-        </article>
+    <main id="index">
+        <div id="content">
+
+            <article>
+                <section>
+                    <h2>Qui suis-je ?</h2>
+                    <div>
+                        <p>Bien le bonjour/bonsoir à toutes et à tous. Je m'appelle Vanwassenhove Kevin, un jeune homme de
+                            27ans.</p>
+                        <p>Ma passion ? Le code, j'ai toujours aimé voir du code malgré ma flemme inimaginable.</p>
+                        <p>J'aime mon pays, je pense que vous l'auriez compris. Ce pays m'a nourri et m'a fait grandir donc je
+                            suis fière d'en montrer son drapeau.</p>
+                    </div>
+                </section>
+                <section>
+                    <h2>Quelle est l'objectif de ce site ?</h2>
+                    <div>
+                        <p>Tout d'abord cela m'a été demandé par ma formation proposé par CF2M qui se situe à Saint-Gilles.</p>
+                        <p>J'ai pour objectif de vous montrer l'avancée de la téchnologie, en tout cas sur les grandes lignes.</p>
+                        <p>Mais surtout, essayer de vous interpeler sur l'origine de celle-ci, est-ce que cette technologie aurait pu apparaître par hasard ou bien par un accident ?</p>
+                        <p>Lorsque je parle d'accident, c'est bien entendue un tremblement de terre ou bien une météorite qui s'écraserait sur la Terre et non pas une idée de génie causée par une pomme qui serait tombé sur la tête de quelqu'un ahaha.</p>
+                    </div>
+                </section>
+            </article>
+            <article>
+                <section>
+                    <h2>Commençons donc par le commencement !</h2>
+                    <div>
+                        <p>Au commencement, Dieu créa les cieux et la terre... OUPS ! Pas si loin dans le temps !</p>
+                        <p>Allons plutôt au commencement de l'informatique, nous remarquons que les femmes en ont été les "porteuses", les initieuses a cette magnifique aventure.</p>
+                        <p>Le 20ème siècle a vu les femmes jouer un rôle important dans le développement de l'informatique, depuis les premières étapes de la programmation jusqu'à l'émergence de l'industrie informatique moderne.</p>
+                        <p>Nous pouvons le proclamer et en être fière que de la même manière que les femmes mettent les hommes au monde, elles ont aussi participé a mettre au monde internet, l'informatique et plein d'autres concepts.</p>
+                        <p>C'est de là que tout a été chamboullé et que l'humanité a vécu un boulversement jamais connu auparavant...</p>
+                    </div>
+                </section>
+                <section>
+                    <h2>L'informatique et la technologie du 20ème siècle :</h2>
+                    <div>
+                        <p>AH l'époque ! Le bon temps comme dirait nos grands parents...</p>
+                        <p>Où l'on pouvait admirer la télévision en noir et blanc. Écrire du texte non pas a la main mais avec une machine a écrire où la moindre faute pouvait être fatale pour notre pauvre petite feuille de papier.</p>
+                        <p>Dans ce siècle, chaque machine crée avait une utilité spécifique qui facilitait la vie de chacun. On pensait a faire une action en particulier et on la concrétisait par la technologie.</p>
+                        <p>C'était une époque prospère en pleine évolution pour mieux rapprocher les gens les uns des autres.</p>
+                        <p>L'invention du téléphonne en 1876 a permis de mieux communiquer et donc de renforcer l'humanité.</p>
+                        <p>On voit donc des idées d'unions et de progression solidaire. Bien sur, l'humain a détourné certaines invention pour en faire du mal mais dans toutes choses il y a un double tranchant.</p>
+                    </div>
+                    <h2>Le "progrès" de celle-ci:</h2>
+                    <div>
+                        <p>Plus le temps passe et plus tout s'accélère. La concurence se fait de plus en plus entre les entreprises que tout se dirige vers la performance. L'industrie intensif se met petit à petit en place et nous voulons toujours tout mieux faire et optimiser.</p>
+                        <p>Ce qui a l'époque avait une seule tâche est vue comme vieux et inutile. On veut pouvoir faire plusieurs choses en même temps avec la même machine.</p>
+                        <p>Les téléphonnes commencent a être portable puis on y ajoute des fonctionnalités comme envoyer des textos ou bien jouer a des jeux.</p>
+                        <p>La télévision passe en couleur et les gens y passent plus de temps qu'avant au lieux de rencontrer des gens.</p>
+                        <p>Les gens deviennent de plus en plus attaché a leur téléphonne et télévision jusqu'à en devenir indispensable.</p>
+                        <p>Les lettres amoureuse se fait de moins en moins, et les textos explosent.</p>
+                        <p>Soudain, intenet apparaît le 12 mars 1989. Ce fut un choc immense pour l'humanité. Les possibilités infini que celle-ci propose désoriente complètement les gens.</p>
+                        <p>Tout devient de plus en plus digitale et les gens passent plus de temps devant un écran que devant les membres de leur famille ou bien avec d'autres personnes de l'éxtérieur.</p>
+                        <p>Des sites internets interdit voient le jour et l'innocence d'une époque passa... Ceraines chose qui nous semblait être réservé pour un public se retrouve visible par tous...</p>
+                        <p>Peut-on vraiment appelé cela un progrès ? Est-ce vraiment a cela que pensait les innovateurs de toute ces technologies ?</p>
+                    </div>
+                </section>
+                <section>
+                    <h2>La décadence de l'humanité :</h2>
+                    <div>
+                        <p>Cela nous ouvre les yeux que plus le temps passe et plus les gens deviennent accro a cette techologie. Nous devons moins sociable et moins intéligent. Le QI diminue avec le temps à cause de cette aisance. Les temps dure qui nous rendait fort ne sont plus et les temps facile qui rendent faible explosent...</p>
+                        <p>Tiendrons nous face a ce virus ? Face a ces tentations qui nous font face a chaque instant ? Mon humble avis est que non. Nous sommes faibles et attiré par les facilités. Nous sommes devenu bien trop dépendant des commerces et technologie qui nous entoure.</p>
+                        <p>Que devons nous faire ? Où nous diriger ? En qui croire ? Nous le savons bien que ceux qui gouverne , mentent.</p>
+                    </div>
+                    <h2>La solution ?</h2>
+                    <div>
+                        <p>Soyons honnête, si vous marchez dans un désert et que vous voyez une maison qu'allez vous vous dire ? Que cette maison est naturel ? Bien sur que non, vous savez que cette maison a été bati par un homme.</p>
+                        <p>L'ordinateur avec lequel vous lisez ces lignes ou bien votre téléphonne/tablette, est-elle aussi une oeuvre naturel ? Bien sur que non ! Il faut être fou pour penser cela n'est-ce pas ? Commet la nature pourrait créer un ordinateur si complexe qui nécessite des calculs incroyablement complexe ?</p>
+                        <p>Comment la nature aurait soudée chaque petit système du CPU de l'ordinateur ?</p>
+                        <p>Mais alors pourquoi penser que notre corps est une oeuvre naturel ? Pourquoi penser que notre cerveau est l'oeuvre du hasard ?</p>
+                        <p>Un ordinateur est bien moins complexe que notre cerveau et pourtant il nous semble plus facile d'imaginer que notre corps est issue du hasard plutôt que de penser cela pour l'ordinateur.</p>
+                        <p>Réveillons nous, la nature autour de nous, notre corps nous montre clairement une oeuvre de quelqu'un. Cette oeuvre est bien entendue celle de Dieu.</p>
+                        <p>La seule solution pour que l'humanité puisse survivre et ne pas s'auto détruire est de croire en Dieu.</p>
+                        <p>Jésus revient, croyez en lui et il vous sauvera.</p>
+                    </div>
+                </section>
+            </article>
+        </div>
     </main>
+
+    <footer>
+        <span>Kevin</span>
+        <article>
+            <section>
+                <h5>Link</h5>
+                <ul>
+                    <li><a href="#">Accueil</a></li>
+                    <li><a href="#">Entreprise</a></li>
+                    <li><a href="#">Galerie</a></li>
+                    <li><a href="#">Me contacter</a></li>
+                </ul>
+            </section>
+            <section>
+                <h5>À propos</h5>
+                <div>
+                    <p>Ce site a été crée pour le projet de formation CF2M.</p>
+                    <p>Basé sur le musée NAME-IP situé a Namur.</p>
+                </div>
+            </section>
+        </article>
+    </footer>
 
     <script src="scripts/main.js"></script>
 
