--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <section>
                     <h2>Qui suis-je ?</h2>
                     <div>
-                        <p>Bien le bonjour/bonsoir à toutes et à tous. Je m'appelle Vanwassenhove Kevin, un jeune homme de
+                        <p>Bien le bonjour/bonsoir à toutes et à tous. Je m'appelle Kevin, un jeune homme de
                             27ans.</p>
                         <p>Ma passion ? Le code, j'ai toujours aimé voir du code malgré ma flemme inimaginable.</p>
                         <p>J'aime mon pays, je pense que vous l'auriez compris. Ce pays m'a nourri et m'a fait grandir donc je
@@ -125,7 +125,7 @@
                 <h5>À propos</h5>
                 <div>
                     <p>Ce site a été crée pour le projet de formation CF2M.</p>
-                    <p>Basé sur le musée NAME-IP situé a Namur.</p>
+                    <p>Basé sur le musée NAM-IP situé a Namur.</p>
                 </div>
             </section>
         </article>
