Ajout logo footer

--- a/index.html
+++ b/index.html
@@ -158,6 +158,10 @@
     <footer>
         <span>Kevin</span>
         <article>
+            <section id="logo">
+                <img id="logoImage" src="images/logo2.png" alt="Logo de CF2M">
+                <p>Fait pour devenir meilleur et visons ensemble l'avenir.</p>
+            </section>
             <section>
                 <h5>Link</h5>
                 <ul>
