refactor et ajout galerie

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <link rel="icon" type="image/x-icon" href="images/logo.png" />
     <title>PrefoWeb</title>
   </head>
@@ -15,7 +16,7 @@
           <ul>
             <li><a href="#">Accueil</a></li>
             <li><a href="#">Entreprise</a></li>
-            <li><a href="#">Galerie</a></li>
+            <li><a href="galerie.html">Galerie</a></li>
             <li><a href="#">Me contacter</a></li>
           </ul>
         </nav>
@@ -44,7 +45,7 @@
         </svg>
       </a>-->
       <div id="cloud">
-        <img src="images/clouds/cloud2.png" alt="">
+        <img src="images/clouds/cloud2.png" alt="" />
       </div>
       <div id="atonium">
         <img src="images/atonium.webp" alt="" />
@@ -457,8 +458,6 @@
       </div>
     </main>
 
-    <script src="scripts/main.js"></script>
-
     <footer>
       <span>Kevin</span>
       <article>
@@ -491,5 +490,7 @@
         </p>
       </section>
     </footer>
+    <script src="scripts/index/showDiv.js"></script>
+    <script src="scripts/index/clouds.js"></script>
   </body>
 </html>
