--- a/galerie.html
+++ b/galerie.html
@@ -20,7 +20,14 @@
         </ul>
       </nav>
     </header>
-
+    <div id="backgroundViewImage"></div>
+    <div id="viewImage">
+      <section>
+        <img src="images/galerie/arrow_left.svg" alt="" />
+        <img src="images/timeline/1425.jpg" alt="" id="imgViewImage" />
+        <img src="images/galerie/arrow_right.svg" alt="" />
+      </section>
+    </div>
     <main>
       <div id="content">
         <article id="timeline">
