--- a/galerie.html
+++ b/galerie.html
@@ -24,7 +24,7 @@
     <div id="viewImage">
       <section>
         <img src="images/galerie/arrow_left.svg" alt="" />
-        <img src="images/timeline/1425.jpg" alt="" id="imgViewImage" />
+        <img src="" alt="" id="imgViewImage" />
         <img src="images/galerie/arrow_right.svg" alt="" />
       </section>
     </div>
