keylister + wheel + arrow

--- a/galerie.html
+++ b/galerie.html
@@ -23,9 +23,9 @@
     <div id="backgroundViewImage"></div>
     <div id="viewImage">
       <section>
-        <img src="images/galerie/arrow_left.svg" alt="" />
+        <img src="images/galerie/arrow_left.svg" alt="" id="leftArrow" />
         <img src="" alt="" id="imgViewImage" />
-        <img src="images/galerie/arrow_right.svg" alt="" />
+        <img src="images/galerie/arrow_right.svg" alt="" id="rightArrow" />
       </section>
     </div>
     <main>
