add horloge test

--- a/galerie.html
+++ b/galerie.html
@@ -30,10 +30,16 @@
     </div>
     <main>
       <div id="content">
+        <div id="horloge1">
+          <video id="flag" src="videos/horloge.mp4" loop muted></video>
+        </div>
         <article id="timeline">
           <h3>TimeLine</h3>
           <section></section>
         </article>
+        <div id="horloge2">
+          <video id="flag" src="videos/horloge.mp4" loop muted></video>
+        </div>
       </div>
     </main>
 
