Auto reset timeline

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <section id="menuList">
         <nav>
           <ul>
-            <li><a href="#">Accueil</a></li>
-            <li><a href="#">Entreprise</a></li>
-            <li><a href="galerie.html">Galerie</a></li>
-            <li><a href="#">Me contacter</a></li>
+            <a href="#"><li>Accueil</li></a>
+            <a href="#"><li>Entreprise</li></a>
+            <a href="galerie.html"><li>Galerie</li></a>
+            <a href="#"><li>Me contacter</li></a>
           </ul>
         </nav>
       </section>
