Revue style galerie

--- a/galerie.html
+++ b/galerie.html
@@ -29,22 +29,22 @@
       </section>
     </div>
     <main>
+      <video id="clock" src="videos/clock.mp4" muted autoplay loop></video>
       <div id="content">
         <article id="timeline">
-          <h3>TimeLine</h3>
+          <h3>TIMELINE</h3>
           <section></section>
         </article>
       </div>
     </main>
 
     <footer>
-      <span>Kevin</span>
       <article>
         <section id="logo">
           <img id="logoImage" src="images/logo2.png" alt="Logo de CF2M" />
           <p>Fait pour devenir meilleur et visons ensemble l'avenir.</p>
         </section>
-        <section>
+        <section id="link">
           <h5>Link</h5>
           <ul>
             <li><a href="#">Accueil</a></li>
@@ -52,13 +52,6 @@
             <li><a href="#">Galerie</a></li>
             <li><a href="#">Me contacter</a></li>
           </ul>
-        </section>
-        <section>
-          <h5>À propos</h5>
-          <div>
-            <p>Ce site a été crée pour le projet de formation CF2M.</p>
-            <p>Basé sur le musée NAM-IP situé a Namur.</p>
-          </div>
         </section>
       </article>
       <div id="skyline"><img src="images/skyline.png" alt="" /></div>
