Debug création entreprise

--- a/galerie.html
+++ b/galerie.html
@@ -29,7 +29,13 @@
       </section>
     </div>
     <main>
-      <video id="clock" src="videos/clock.mp4" muted autoplay loop></video>
+      <video
+        id="engrenage"
+        src="videos/engrenage.mp4"
+        muted
+        autoplay
+        loop
+      ></video>
       <div id="content">
         <article id="timeline">
           <h3>TIMELINE</h3>
@@ -57,8 +63,9 @@
       <div id="skyline"><img src="images/skyline.png" alt="" /></div>
       <section id="copyright">
         <p>
-          © [2023] Kevin. Tous droits réservés. Le logo de CF2M est une marque
-          déposée de CF2M et est utilisé avec permission.
+          © [2023] Kevin. Design in collaboration with : Sebastien. Tous droits
+          réservés. Le logo de CF2M est une marque déposée de CF2M et est
+          utilisé avec permission.
         </p>
       </section>
     </footer>
