--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
           <ul>
             <a href="#"><li>Accueil</li></a>
-            <a href="#"><li>Entreprise</li></a>
+            <a href="entreprise.html"><li>Entreprise</li></a>
             <a href="galerie.html"><li>Galerie</li></a>
             <a href="#"><li>Me contacter</li></a>
           </ul>
@@ -485,11 +485,16 @@
       <div id="skyline"><img src="images/skyline.png" alt="" /></div>
       <section id="copyright">
         <p>
-          © [2023] Kevin. Tous droits réservés. Le logo de CF2M est une marque
-          déposée de CF2M et est utilisé avec permission.
+          © [2023] Kevin. Design in collaboration with : Sebastien. Tous droits
+          réservés. Le logo de CF2M est une marque déposée de CF2M et est
+          utilisé avec permission.
         </p>
       </section>
     </footer>
+    <script>
+      document.getElementById("flag").play();
+    </script>
+    <script src="scripts/index/showMenuList.js"></script>
     <script src="scripts/index/showDiv.js"></script>
     <script src="scripts/index/clouds.js"></script>
   </body>
