--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/content.css" />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="icon" type="image/x-icon" href="images/logo.png" />
     <title>PrefoWeb</title>
