--- a/entreprise.html
+++ b/entreprise.html
@@ -24,7 +24,28 @@
     <main>
       <div id="content">
         <article id="presentation">
-          <section id="card"></section>
+          <section id="card">
+            <div id="profile">
+              <img src="images/victor_petit.jpg" alt="" />
+            </div>
+            <div id="description">
+              <span>Victor Petit</span>
+              <p>Développeur fullstack</p>
+              <p>Web & Mobile</p>
+            </div>
+            <hr />
+            <div id="social-media">
+              <a href="#">
+                <img src="images/twitter.svg" alt="" />
+              </a>
+              <a href="#">
+                <img src="images/facebook.svg" alt="" />
+              </a>
+              <a href="#">
+                <img src="images/linkedin.svg" alt="" />
+              </a>
+            </div>
+          </section>
           <section></section>
         </article>
         <article id="interview">
@@ -588,9 +609,9 @@
         <section id="link">
           <h5>Link</h5>
           <ul>
-            <li><a href="#">Accueil</a></li>
+            <li><a href="index.html">Accueil</a></li>
             <li><a href="#">Entreprise</a></li>
-            <li><a href="#">Galerie</a></li>
+            <li><a href="galerie.html">Galerie</a></li>
             <li><a href="#">Me contacter</a></li>
           </ul>
         </section>
