--- a/galerie.html
+++ b/galerie.html
@@ -53,8 +53,8 @@
         <section id="link">
           <h5>Link</h5>
           <ul>
-            <li><a href="#">Accueil</a></li>
-            <li><a href="#">Entreprise</a></li>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="entreprise.html">Entreprise</a></li>
             <li><a href="#">Galerie</a></li>
             <li><a href="#">Me contacter</a></li>
           </ul>
