--- a/index.html
+++ b/index.html
@@ -470,8 +470,8 @@
           <h5>Link</h5>
           <ul>
             <li><a href="#">Accueil</a></li>
-            <li><a href="#">Entreprise</a></li>
-            <li><a href="#">Galerie</a></li>
+            <li><a href="entreprise.html">Entreprise</a></li>
+            <li><a href="galerie.html">Galerie</a></li>
             <li><a href="#">Me contacter</a></li>
           </ul>
         </section>
