--- a/entreprise.html
+++ b/entreprise.html
@@ -35,18 +35,35 @@
             </div>
             <hr />
             <div id="social-media">
-              <a href="#">
-                <img src="images/twitter.svg" alt="" />
-              </a>
-              <a href="#">
-                <img src="images/facebook.svg" alt="" />
-              </a>
-              <a href="#">
-                <img src="images/linkedin.svg" alt="" />
-              </a>
+              <div>
+                <a href="#">
+                  <img src="images/twitter.svg" alt="" />
+                </a>
+              </div>
+              <div>
+                <a href="#">
+                  <img src="images/facebook.svg" alt="" />
+                </a>
+              </div>
+              <div>
+                <a href="#">
+                  <img src="images/linkedin.svg" alt="" />
+                </a>
+              </div>
             </div>
           </section>
-          <section></section>
+          <section>
+            <h2>Présentation :</h2>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis
+              voluptatibus, ad harum facere ex eum adipisci tempore architecto
+              accusantium pariatur, quis ab sapiente nihil ut doloremque veniam
+              sit consequuntur at. Repellat quae nulla deserunt qui voluptas
+              sequi! Expedita illum corrupti totam sunt. Reiciendis, aperiam cum
+              laborum quae facere aliquam adipisci, assumenda voluptate quis et
+              dolore, impedit illo magnam nisi mollitia?
+            </p>
+          </section>
         </article>
         <article id="interview">
           <section class="showingDiv">
