--- a/entreprise.html
+++ b/entreprise.html
@@ -2,7 +2,6 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/content.css" />
@@ -16,7 +15,7 @@
         <ul>
           <li><a href="index.html">Accueil</a></li>
           <li><a href="#" class="selected">Entreprise</a></li>
-          <li><a href="#">Galerie</a></li>
+          <li><a href="galerie.html">Galerie</a></li>
           <li><a href="#">Me contacter</a></li>
         </ul>
       </nav>
@@ -26,7 +25,7 @@
         <article id="presentation">
           <section id="card">
             <div id="profile">
-              <img src="images/victor_petit.jpg" alt="" />
+              <img src="images/interview/victor_petit.jpg" alt="" />
             </div>
             <div id="description">
               <span>Victor Petit</span>
@@ -37,17 +36,17 @@
             <div id="social-media">
               <div>
                 <a href="#">
-                  <img src="images/twitter.svg" alt="" />
+                  <img src="images/socials/twitter.svg" alt="" />
                 </a>
               </div>
               <div>
                 <a href="#">
-                  <img src="images/facebook.svg" alt="" />
+                  <img src="images/socials/facebook.svg" alt="" />
                 </a>
               </div>
               <div>
                 <a href="#">
-                  <img src="images/linkedin.svg" alt="" />
+                  <img src="images/socials/linkedin.svg" alt="" />
                 </a>
               </div>
             </div>
@@ -618,6 +617,9 @@
     </main>
 
     <footer>
+      <div id="cloud">
+        <img src="images/clouds/cloud1.png" alt="" />
+      </div>
       <article>
         <section id="logo">
           <img id="logoImage" src="images/logo2.png" alt="Logo de CF2M" />
@@ -633,7 +635,7 @@
           </ul>
         </section>
       </article>
-      <div id="skyline"><img src="images/skyline.png" alt="" /></div>
+      <div id="skyline"><img src="images/skylineParis.png" alt="" /></div>
       <section id="copyright">
         <p>
           © [2023] Kevin. Design in collaboration with : Sebastien. Tous droits
@@ -643,5 +645,18 @@
       </section>
     </footer>
     <script src="scripts/index/showDiv.js"></script>
+    <script>
+      let idCloud = 1;
+      const pathCloud = "images/clouds/cloud";
+
+      const imgCloud = document.getElementById("cloud").children[0];
+      imgCloud.src = pathCloud + idCloud + ".png";
+      setInterval(() => {
+        ++idCloud;
+        if (idCloud === 3) ++idCloud;
+        if (idCloud > 5) idCloud = 1;
+        imgCloud.src = pathCloud + idCloud + ".png";
+      }, 30 * 1000);
+    </script>
   </body>
 </html>
