--- a/galerie.html
+++ b/galerie.html
@@ -14,7 +14,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Accueil</a></li>
-          <li><a href="#">Entreprise</a></li>
+          <li><a href="entreprise.html">Entreprise</a></li>
           <li><a href="#" class="selected">Galerie</a></li>
           <li><a href="#">Me contacter</a></li>
         </ul>
