--- a/index.html
+++ b/index.html
@@ -498,5 +498,8 @@
     <script src="scripts/index/showMenuList.js"></script>
     <script src="scripts/index/showDiv.js"></script>
     <script src="scripts/index/clouds.js"></script>
+    <script>
+      activateClouds(22);
+    </script>
   </body>
 </html>
