--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
         <span></span><span></span><span></span>
       </div>
       <div id="mainTitle">
-        <h1>Fruit du hasard ?</h1>
+        <h1>Preformation</h1>
+      </div>
+      <div id="arrowIndiquation">
+        <img src="images/galerie/arrow_left.svg" alt="" />
+        <img src="images/galerie/arrow_left.svg" alt="" />
+        <img src="images/galerie/arrow_left.svg" alt="" />
       </div>
       <video id="flag" src="videos/flag_belgium.mp4" loop muted></video>
     </header>
@@ -49,10 +54,10 @@
         <img src="images/clouds/cloud1.png" alt="" />
       </div>
       <div id="atonium">
-        <img src="images/atonium.webp" alt="" />
+        <img src="images/atonium.png" alt="" />
       </div>
-      <div id="beer">
-        <img src="images/beer.webp" alt="" />
+      <div id="mannekenpis">
+        <img src="images/mannekenPis.png" alt="" />
       </div>
       <div id="content">
         <section id="contentTitle">
@@ -460,27 +465,19 @@
     </main>
 
     <footer>
-      <span>Kevin</span>
       <article>
         <section id="logo">
           <img id="logoImage" src="images/logo2.png" alt="Logo de CF2M" />
           <p>Fait pour devenir meilleur et visons ensemble l'avenir.</p>
         </section>
-        <section>
+        <section id="link">
           <h5>Link</h5>
           <ul>
-            <li><a href="#">Accueil</a></li>
-            <li><a href="entreprise.html">Entreprise</a></li>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="#">Entreprise</a></li>
             <li><a href="galerie.html">Galerie</a></li>
             <li><a href="#">Me contacter</a></li>
           </ul>
-        </section>
-        <section>
-          <h5>À propos</h5>
-          <div>
-            <p>Ce site a été crée pour le projet de formation CF2M.</p>
-            <p>Basé sur le musée NAM-IP situé a Namur.</p>
-          </div>
         </section>
       </article>
       <div id="skyline"><img src="images/skyline.png" alt="" /></div>
@@ -498,6 +495,7 @@
     <script src="scripts/index/showMenuList.js"></script>
     <script src="scripts/index/showDiv.js"></script>
     <script src="scripts/index/clouds.js"></script>
+    <script src="scripts/index/slideArrow.js"></script>
     <script>
       activateClouds(22);
     </script>
