Refactoring et correction arrow left

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <h1>Preformation</h1>
       </div>
       <div id="arrowIndiquation">
-        <img src="images/galerie/arrow_left.svg" alt="" />
-        <img src="images/galerie/arrow_left.svg" alt="" />
-        <img src="images/galerie/arrow_left.svg" alt="" />
+        <img src="images/arrow_left.svg" alt="" />
+        <img src="images/arrow_left.svg" alt="" />
+        <img src="images/arrow_left.svg" alt="" />
       </div>
       <video id="flag" src="videos/flag_belgium.mp4" loop muted></video>
     </header>
